--- a/olympiads/central_european/2020/day_1/2020.md
+++ b/olympiads/central_european/2020/day_1/2020.md
@@ -1,7 +1,6 @@
 # Central European OI 2020 Day 1
 
-## 1 - Fancy Fence
-
+## 1. Fancy Fence
 Let us first solve the case where all of the rectangle widths are $1$.
 Our approach should be to find larger bounding rectangles and then for each one independently find the amount of distinct subrectangles.
 We can then try to for every rectangle assume its height to be the largest height in its bounding box, and find its nearest smaller values to find the largest bounding box.
@@ -11,3 +10,36 @@ Now we have cleanly split the fence into individual rectangles. Each rectangle, 
 
 The issue is that we end up double-counting subrectangles if two rectangles overlap, so to avoid this we methodically subtract the amount of double-counted rectangles.
 Also if two fence posts of the same height are contained within the same rectangle then make sure to only count the rectangle one time.
+
+## 3. Star Trek
+Monstrous implementation process. I think this is the first time I coded brute force to verify whether all my DFS's were working correctly.
+
+Do an $O(N)$ dfs for each node to figure out if the captain wins or loses if he starts at that node. Use dp: a node is winning iff at least one of its children is losing. By default, leaves are always losing.
+
+The above can be sped up to $O(N)$ with rerooting.
+
+Refer to an index $i$ as a losing state, if when the original tree is rooted at $i$, the captain loses. It's a winning state if the captain wins. Refer to a node $P^u_i$ as losing/winning if the captain loses/wins beginning at node $i$ in universe $u$, when only allowing use of portals $[u,D-1]$.
+
+By default, the state of $P^u_x$ is the same as $x$. A portal between $P^u_x$ and $P^{u+1}_y$ will only change the state of $P^u_x$ if both $x$ and $P^{u+1}_y$ are losing states. Flipping the state of $x$ may also affect the states of other nodes through a chain reaction.
+
+So for each node $i$ we can calculate the amount $S_i$ of losing nodes $j$, such that if $j$ flips states, then $i$ also flips states. $O(N)$ by utilizing rerooting dp (again). This one is much more complex.
+
+Start at the last universe and work backwards. We can define a dp $dp[u][i][\text{lose/win}]$ that stores the amount of configurations of the portals $[u,D-1]$, given that $P^u_i$ is a losing/winning state.
+
+The transitions:
+ - for reference: let $L_u=\sum_{i=1}^N dp[u][i][\text{lose}]$.
+ - If $i$ is a losing state, then $dp[u][i][\text{win}]=S_iL_{u+1}$.
+ - And since states are binary and there are $N^{2(D-u)}$ states total, then $dp[u][i][\text{lose}]=N^{2(D-u)}-S_iL_{u+1}$.
+ - If $i$ is winning, then similar logic will hold. $dp[u][i][\text{lose}]=S_iL_{u+1}$, and $dp[u][i][\text{win}]=N^{2(D-u)}-dp[u][i][\text{lose}]$.
+
+$L_D$ is equal to the amount of nodes $i$ such that $i$ is losing. We aim to calculate $L_1$, then following the above gets us $dp[0][1][\text{win}]$ which is the answer.
+
+To calculate $L_u$: Let $S_L$ be the sum of all $S_i$ such that $i$ is losing, and $S_W$ be the sum for all winning $i$. $|L|$ is the amount of losing $i$.
+
+$L_u=S_WL_{u+1}+|L|N^{2(D-u)}-S_LL_{u+1}=(S_W-S_L)L_{u+1}+|L|N^{2(D-u)}$.
+
+Most variables are constant, which is nice. Let $S=S_W-S_L$. We can see that post expansion, we get that $L_1=S^{D-1}L_D+(S^{D-2}|L|N^2+S^{D-3}|L|N^4+\dots+S^0|L|N^{2(D-1)})$, and the second part is a nice geometric series.
+
+So the common ratio $R={N^2\over{S}}$. Then, $L_1=S^{D-1}L_D+{{S^{D-2}|L|N^2}(1-R^{D-1})\over{1-R}}$. Now calculate $dp[0][1][\text{win}]$.
+
+Time complexity: $O(N+logD)$.
