--- a/olympiads/zhautykov/2017/izho_2017.md
+++ b/olympiads/zhautykov/2017/izho_2017.md
@@ -12,3 +12,22 @@ Denote $M=2^{20}$. It's clear that for the first way, we retrieve dp values in $
 The "balance" of $\sqrt{M}$, in this case, is to split the bits into two groups of $10$, and retrieve from the left half in $O(\sqrt{M})$ and right half in $O(1)$. We can update for the left half in $O(1)$ and the right half in $O(\sqrt{M})$, thus yielding a balance of $O(\sqrt{M})$. I denote $L_i$ as the value of the left half of bits in $a_i$, and $R_i$ as the right half. 
 
 We can get an answer by fixing $\sqrt{M}$ values for the left half (denoted $l$) and then retrieving the complementary pair $(r,x)$ for the right half in $O(1)$. We can look up these values in an array $dp[l][r][x]$, which gives the maximum $ans_i$ such that $a_i$ satisfies all these values (such that $L_i=l$ and $popcount(R_i,r)=x$; essentially a combination of both dp arrays). We can then update the dp array, with the right half in $O(\sqrt{M})$ and the left half in $O(1)$. In total, the time complexity is $O(N\sqrt{M})=O(N\sqrt{a})$.
+
+# IZhO 2017 Day 2
+
+## 3. Hard route
+For a hard route $(A,B)$, let the farthest node(s) from the path be $C$. The point(s) where $C$ meets the path is node $D$.
+
+Nontrivially: If $(A,B)$ has maximum hardness, then there is only one $D$ for the path $(A,B)$. Otherwise, it's always possible to construct a path with greater hardness.
+
+Example: assume there are two such $D$, $D_1$ and $D_2$. Assume that $D_1$ is closer to $A$ than $D_2$.
+ - $a$ is dist from $A$ to $D_1$.
+ - $b=dist(D_1,D_2)$
+ - $c=dist(D_2,B)$
+ - $d=dist(D_1,C)$
+
+The hardness of the current route is $(a+b+c)d$. For example, if $a>d$, then a better route is from $D_1$ to $B$ and has hardness $(b+c+d)a$. Same goes if $c>d$. We can use similar reasoning to prove that a better route exists whenever $a\le{d}$ or $c\le{d}$.
+
+So the problem is reduced to the following: fix each node as $D$, and count the maximum hardness of a (and number of) hard routes passing through this node. The answer is easily obtained by merging these values for all nodes. We never double count hard paths of maximum hardness, since each of these paths is defined uniquely by a single node $D$.
+
+$O(NlogN)$ time complexity.
