--- a/olympiads/baltic/2020/boi_2020.md
+++ b/olympiads/baltic/2020/boi_2020.md
@@ -8,3 +8,25 @@ WLOG assume only one component. Odd cycles can be solved in the same way (howeve
 Increasing $i$ by $x$ decreases all nodes an odd distance away from $i$ by $x$, and increases all nodes an even distance from $i$ by $x$. If we disregarded the nodes an odd distance away, or vice versa, then the problem would easily be solved by subtracting the median from all nodes. To take into account the decreasing, we simply negate all the values of nodes an odd distance away; thus there is only one set of numbers to consider and we can easily calculate the answer.
 
 Time complexity: $O(NlogN+M)$, because of sorting to find the median (or use quicksort to get $O(N+M)$...).
+
+## 2. Village
+
+### Maximum Answer
+Draw a directed path from each villager's house to the house that it's moving to.
+
+Here is a construction: while two paths don't share a common node, swap the endpoints of the paths.
+
+The above construction is optimal because if all paths share a common vertex, then the only possible vertex can be the centroid. So in these cases the answer must always be the same: the sum of depths from the centroid, multiplied by $2$ (if there are two centroids, the answer is the same from both).
+
+Moreover, the construction always exists from the centroid. Take the preorder traversal and link the villager in the house at index $i$ to the house at index $1+((i+N/2)\mod{N})$ (since by definition of centroid, those two must be in different children of the centroid's subtrees, so the path between them passes through the centroid).
+
+Time complexity: $O(N)$.
+
+### Minimum Answer
+Root the tree arbitrarily, and start from the leaves. It's clear that it's optimal to link all leaves to their parents. This motivates the following down-up process:
+ - For a node, consider all unassigned children.
+ - Assign this node to the first unassigned child, the first unassigned child to the second unassigned child, ..., the last unassigned child to this node.
+
+At the end, if the root isn't assigned, assign it to any child and resolve any contradictions in assignment as needed.
+
+Time complexity: $O(N)$ as well, so time complexity of solving the entire problem is $O(N)$.
