--- a/olympiads/asia_pacific/2010/apio_2010.md
+++ b/olympiads/asia_pacific/2010/apio_2010.md
@@ -1,5 +1,11 @@
 # APIO 2010
 
+## 1. Commando
+Let $dp_i$ be the maximum answer for a complete division of the first $i$ soldiers. Writing out the dp transition (let $ps_i$ be the sum of the first $i$ elements):
+ - $dp_i=\max_{1\le{j}<i}[a(ps_i-ps_j)^2+b(ps_i-ps_j)+c+dp_j]$
+
+Since $a,b,c$ are constants, post simplification we can use CHT to get the maximum value of this expression. In this specific problem, both slopes and queries are strictly increasing so it runs in $O(N)$.
+
 ## 2. Patrol
 For $K=1$: the problem is reduced to maximizing the length $L$ of a path in the graph, and the final answer is $2(N-1)-L+K$.
 
