--- a/olympiads/international/2002/ioi_2002.md
+++ b/olympiads/international/2002/ioi_2002.md
@@ -2,3 +2,8 @@
 
 ## 1. The Troublesome Frog
 Define a frog path by two plants $i$ and $j$ (they are two consecutive plants on the frog path). We can find all the plants lying on this frog path. Fixing $i$ and $j$, and doing the check, will take $O(N^3)$, and the drawback is that for some frog path, we consider it for each pair of consecutive plants. We can limit ourselves to only one check, and by doing this it runs in $O(N^2)$.
+
+# IOI 2002 Day 2
+
+## 1. Batch Scheduling
+Let $dp[i]$ be the minimum cost for jobs $[i,N]$. The transitions are (surprisingly) simplified with CHT that can be done in $O(N)$ with deque.
