--- a/codeforces/contests/2001_to_2500/2071/2071.md
+++ b/codeforces/contests/2001_to_2500/2071/2071.md
@@ -1,5 +1,10 @@
 # CF Round 1007 (#2071)
 
+## C. Trapmigiano Reggiano
+holy fucking shit
+
+All vertices depth $n-1$ from en, then depth $n-2$, etc.
+
 ## E. LeaFall
 My first real probability problem requiring mod inverses. I figured out a handful of useful properties:
  - ${a\over{b}}\cdot{c\over{d}}\equiv{ab^{-1}cd^{-1}}\pmod{998244353}$
