--- a/olympiads/polish/2006/round_1/poi_2006_r1.md
+++ b/olympiads/polish/2006/round_1/poi_2006_r1.md
@@ -3,6 +3,6 @@
 ## 3? Frogs
 Find the closest scarecrow to each cell (the weight of the cell) then find the maximum minimum cell weight on a path from $(p_x,p_y)$ to $(k_x,k_y)$ (e.g. with Dijkstra or Kruskal).
 
-To compute the closest scarecrow: iterate over each row. We'll compute the answer for all cells in this row in $O(M)$ time. For each cell in the row, we find the closest scarecrow to the cell (that is in the same column as the cell). There are at most $M$ such scarecrows, and as we want to minimize the distance to the nearest scarecrow, these are the only ones we have to consider. So then the answer for all cells in the row can be computed in $O(N)$ amortized time with CHT.
+To compute the closest scarecrow: iterate over each row. We'll compute the answer for all cells in this row in $O(M)$ time. For each cell in the row, we find the closest scarecrow to the cell (that is in the same column as the cell). There are at most $M$ such scarecrows, and as we want to minimize the distance to the nearest scarecrow, these are the only ones we have to consider. So then the answer for all cells in the row can be computed in $O(M)$ amortized time with CHT.
 
 We can preprocess the closest scarecrow to each cell in the same column as the cell in $O(NM)$ time total. This means that calculating the distances takes $O(NM)$ time, and I calculate the answer with Dijkstra, which is $O(NMlogNM)$.
