--- a/codeforces/contests/1501_to_2000/1907/1907.md
+++ b/codeforces/contests/1501_to_2000/1907/1907.md
@@ -2,3 +2,12 @@
 
 ## A. Rook
 For a rook at row $i$ and column $j$, all squares it can move to must have the same row or have the same column. You can brute-force over all $64$ squares or iterate over all rows and columns separately. The first approach takes $O(N^2)$ where $N$ is the length of the grid and the second takes $O(N)$. But $N=8$, so it doesn't matter anyways.
+
+## G. Lights
+If we did not have to minimize the number of operations, it would be sufficient to draw an undirected edge between $i$ and $a_i$, and the problem is reduced to finding any set of edges such that each node's degree, when restricted to only edges in this set, has a specific parity (this is a problem that can be done with spanning tree). Since we find an arbitrary spanning tree, it is impossible to minimize the number of operations used.
+
+To minimize operations, we need to take advantage of the fact that this graph is a functional graph. We draw a directed edge from $i$ to $a_i$ and can easily see that when disregarding the cycles in each component, the resulting graphs are trees (for which we can run the aforementioned algorithm on, minimizing operations used).
+
+Now we need to manage each cycle. If a node in the cycle is still on, then exactly one of the edges adjacent to this node in the cycle will not used in the final configuration. So we can just fix which edge not to use, delete it, and the resulting graph is (again) a tree which we can run the algorithm on.
+
+$O(N)$ time complexity.
