--- a/atcoder/abc/135/abc135.md
+++ b/atcoder/abc/135/abc135.md
@@ -19,10 +19,10 @@ The claim is: for any $(X,Y)$ such that $X+Y\le{2K}$ and $X+Y$ is even, we can e
 (This claim can be checked with a brute force program). For a direct construction, WLOG assume that $X\le{Y}$ and $X,Y\ge{0}$; then set $a:=K-(Y-X)/2$. The rest follows:
  - $b:=K-a$
  - $c:=X-a$
- - $d:=K-|a|$
+ - $d:=K-|c|$
 
 ### Case 3: $X+Y>2K$
-Define an "orthogonal" move as a vector either of the form $(K,0)$ or $(0,K)$.
+Define an "orthogonal move" as a vector either of the form $(K,0)$ or $(0,K)$.
 
 Only moving in the direction of $(X,Y)$ is fastest, and one way to achieve this is with repeated orthogonal moves. So move orthogonally until $|X-A|+|Y-B|\le{2K}$, then the case is reduced to one of the above two.
 
