What am I doing

--- a/codeforces/contests/1501_to_2000/1998/1998.md
+++ b/codeforces/contests/1501_to_2000/1998/1998.md
@@ -1,9 +1,37 @@
 # Codeforces Round 965 (#1998)
 
 ## D. Determine Winning Islands in Race
-
 Solve for a fixed start point $S$. Bessie moves in a fixed path, so she will lose only if Elsie can get to any islands $>= S$ strictly before Bessie can. We can BFS to find the shortest paths to all islands $< S$; Bessie never travels to them so they are all accessible to Elsie. Then for all islands $< S$ check to see if they have any islands $>= S$ in their adjacency lists, and if so update the min distance to those islands. There's no need to traverse the adjacency lists of any islands $>= S$ because for an island $>= S$, if Elsie gets there before Bessie then she already wins, so we can stop there. If she doesn't get there first then she is eliminated at this island, so we can't traverse the adjacency list of it. 
 
 Now for this $S$ we have the minimum distances ($d[i]$) to the islands, and it's left to check if there's some $d[i]$ such that $i-S>d[i]$ (if there is then Elsie wins). So rearrange to $d[i]-i-S>0$, then calculate all $d[i]-i$ and store in a multiset. Elsie just needs to beat Bessie to one island to win, so we want to consider the max in the multiset.
 
 We solved it for one $S$; it is a pretty easy transition to solve it for all $S$ (iterate over $S$ in increasing order and update the distance array for index $S-1$ and all nodes adjacent to $S-1$ in each iteration). Because of the multiset it takes $O(NlogN)$.
+
+## E2. Eliminating Balls With Merging (Hard Version)
+This problem can be viewed as a transformation of [ARC189D - Takahashi is Slime](https://atcoder.jp/contests/arc189/tasks/arc189_d). It is possible to achieve $S=\set{j}$ iff slime $j$ can absorb all other slimes.
+
+Iterate over $i$ in increasing order. Let the set of good $j$ for some $i$ be $S_i$. $S_i$ can be obtained as follows:
+ - If $\sum_{x=1}^{i-1}{a_x}<a_i$, then set $S_i=\set{i}$ (all good indices from $S_{i-1}$ are no longer good).
+ - Otherwise, $S_i$ is a superset of $S_{i-1}$. So set $S_i=S_{i-1}$ and add in all indices $j$ that are good for $i$, but $\notin{S_{i-1}}$.
+
+It's clear through these steps, that each $j$ is good for a range of $i$. Denote it $[l_j,r_j]$. The above steps already cover deletion of $j$, so it's only of interest to find $l_j$ for all $j$. Then the second step becomes:
+ - Set $S_i=S_{i-1}$, and add to $S_i$ all $j$ such that $l_j=i$.
+
+For each $j$ find the index of its nearest larger value to the left. Define it $mx_j$.
+
+Additionally, let $ps$ be the prefix sum array.
+
+$l_j$ has the following recurrence:
+ - Find the minimum $k>j$, such that $j$ can absorb all slimes in the range $[mx_j+1,k]$, and such that $ps_k-ps[mx_j-1]\ge{a[mx_j]}$.
+ - If no $k$ exists, then $j$ is never good. Else, $l_j=\max(l[mx_j],k)$.
+
+By definition of $mx_j$, then $j$ can always absorb all slimes $\in[mx_j+1,j]$. So it's only necessary to deal with merging with slimes $>j$, which is much simpler.
+
+If a valid $k$ exists, then it must be the smallest index $k_2>i$ such that $ps[k_2]-ps[mx_j]\ge{a[mx_j]}$. $k$ is thus found with binary search. It only remains to check if $k$ works.
+
+$k$ works iff the following holds for all $j\le{l}<k$: $ps_l-ps[mx_j]\ge{a_{l+1}}$. Therefore $\min_{j\le{l}<k}(ps_l-a_{l+1})\ge{ps[mx_j]}$. Use sparse table.
+
+Now all $l_j$ are found, and the algorithm can be run in $O(NlogN)$.
+
+## Comments
+E2: I tried for a while to find an $O(N)$ solution, but I could only come up with $O(NlogN)$ unfortunately (I still think it's a beautiful solution). I think trying to find $O(N)$ made me come up with lots of new ideas/I was much more creative than I normally would have been.
