--- a/olympiads/baltic/2016/boi_2016.md
+++ b/olympiads/baltic/2016/boi_2016.md
@@ -19,3 +19,14 @@ So, only place down the subset of edges/line segment with weight $<r_i$. If this
 All line segments have endpoints at some tree's center (or a border). So we can easily verify the above by creating connected components of line segments, and checking the connectivity of the borders to each other. If they're connected, then there must exist a chain of line segments from one border to the other. This means that anything on one side of that chain of line segments can't cross to the other side. This can be done with DSU.
 
 To extend to $M$ queries, just process queries and edges in increasing order or radii. Time complexity: $O(N^2logN^2+MlogM)$.
+
+# BOI 2016 Day 2
+
+## 3. Swap
+Construct the binary tree corresponding to swaps.
+
+Let $dp[i][j]$ denote the following:
+ - After operation $i-1$, the value of $a_i$ is $j$. There are only $O(logN)$ such values of $j$, so it is ok.
+ - $dp[i][j]$ stores whether we should perform operations $i$ and/or $i+1$ (i.e. swap with left and/or right children), as to get the lex min sequence when only considering the subtree of $i$.
+
+Since there are only four possible swap combinations, we can evaluate $dp[i][j]$ in $O(\text{size of subtree of i})$ time. Across all $(i,j)$, this takes $O(logN)\cdot{O(NlogN)}=O(Nlog^2N)$.
