--- a/olympiads/baltic/2017/boi_2017.md
+++ b/olympiads/baltic/2017/boi_2017.md
@@ -6,3 +6,26 @@ Ok an hour of debugging because I initialized my binary lift array log dimension
 The graph is a DAG. Specifically, it can be divided into $N/K$ groups of $K$ nodes each. An edge can only exist between two adjacent groups.
 
 The benefit of this is that we can consider the groups instead of nodes. We effectively build ourselves a line graph, and so it allows for binary lifting, where $lift[i][j][k][l]$ is the shortest path from group $i$, node $j$ to group $i+2^k$, node $l$ (i.e. node $Ki+j$ to node $K(i+2^k)+l$). This can be calculated in $O(K^3NlogN)$ and queries can be answered in similar fashion in $O(K^2OlogN)$, for a combined complexity of $O(K^3NlogN+K^2OlogN)$.
+
+# BOI 2017 Day 2
+
+## 1. Cat in a tree
+Consider the following greedy: continuously mark the deepest possible node.
+
+It's easy to see why this works if the deepest node is unique. However, if there are multiple deepest nodes, then the claim is that any one of them works.
+
+"Marking" a node = putting an office there. It "bans" all nodes $<D$ away from this node (can't put an office there).
+
+The set of deepest nodes can be partitioned into groups where two nodes are in the same group if and only if they are $<D$ apart. Given that all nodes have the same depth, then marking any node in the same group will ban the same set of nodes. So no matter the order in which these nodes are marked, in the end exactly one node from each group will be marked.
+
+Let's focus on a dp that reflects the greedy: $dp_i$ is the minimum distance to a marked node in the subtree of $i$.
+
+To calculate $dp_i$, sort the values of $dp_{\text{child}}+1$ in decreasing order. Let them be $c_1,c_2,\dots,c_k$.
+
+Initialize $dp_i=D$, then iterate over $j$ from $1$ to $k$:
+ - If $c_j+dp_i<D$, then at least one node has to be unmarked to satisfy the $D$ constraint. Optimally, we unmark the node that $c_j$ corresponds to in order to maximize $dp_i$. Consequently, decrease the answer by $1$.
+ - Otherwise, we can keep the node that $c_j$ corresponds to marked, so set $dp_i=c_j$.
+
+After this, if $dp_i=D$, then we can mark $i$. In this case, set $dp_i=0$ and increase the answer by $1$.
+
+$O(NlogN)$.
